style.css
@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Shippori Antique', sans-serif;
}

html {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #000000;
    min-height: 100vh;
    max-height: fit-content;
}

body {
    display: flex;
    width: 70vw;
    background-color: white;
    min-height: 80vh;
    max-height: fit-content;
}

.left-side {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 40vw;
    background-image: url(./svg/bg.svg);
    background-size: cover;
}

img {
    height: 10vw;
    background-color: white;
    padding: .5vw;
    border: black solid .5vw;
}

.left-side > div {
    display: flex;
    justify-content: center;
    background-color: black;
    color: white;
    height: fit-content;
    margin-top: 100px;
    opacity: 80%;
}

.right-side {
    width: 60vw;
    display: flex;
    flex-direction: column;
    gap: 100px;
    margin: 20px;
    align-items: center;
}

.right-side > p {
    max-width: 700px;
    background-color: #000000;
    color: white;
    padding: 10px;
}

.right-side > div {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

form {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
    gap: 10px;
}

fieldset {
    display: flex;
    gap: 5vw;
    border: black solid 3px;
    padding: 35px;
    position: relative;
    box-shadow: black 3px 3px;
}

fieldset div {
    position: relative;
}

label {
    transition: 0.3 ease-out;
    position: absolute;
    left: 0;
    top: 0;
    padding: 2px 5px;
    transition: 0.2s ease-out;
    color: #444444;
}

input:not(:placeholder-shown) + label {
    background-color: none;
    color: black;
    top: -26px
}

input:hover + label {
    color: black;
    cursor:text;
}

input:focus + label {
    top: -26px;
    background-color: black;
    color: white;
}

input {
    border: black solid 2px;
    height: 29px;
    width: 200px;
    transition: 0.2s ease-out;
    font-size: .95em;
    padding-left: 5px;
}

input:focus {
    box-shadow: black 2px 2px;
    outline: none;
}

input:hover {
    background-color: #e4e4e4;
}

label + input {
    display: block;
}

.right-side > div > div:last-child {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

p {
    color: #2a2a2a;
}

a {
    color: grey;
    transition: 0.3s ease-out;
    text-decoration: none;
}

a:hover {
    color: black;
    text-decoration: underline;
}

button {
    width: 200px;
    height: 40px;
    border: black solid 3px;
    font-size: 1.1em;
    transition: 0.2s ease-out;
}

button:hover {
    cursor: pointer;
    box-shadow: black 3px 3px;
}

button:active {
    background-color: black;
    color: white;
    box-shadow: black 0px 0px;
}

@media only screen and (max-width: 1260px) {

    body {
        width: 100vw;
        min-height: 100vh;
        max-height: fit-content;
    }

    .right-side {
        justify-content: start;
    }

    .right-side > p {
        position: absolute;
        margin: 0 20px;
    }

    .right-side > div {
        margin: auto 0;
    }

}

@media only screen and (max-width: 850px) {
    

    body {
        flex-direction: column;
        align-items: center;
    }

    .right-side {
        width: fit-content;
    }

    .right-side > p {
        position: static;
        margin: 0;
    }

    img {
        height: 20vw;
    }

    input {
        width: 100%;
    }

    .left-side {
        width: 98vw;
        height: 20vh;
    }

    .right-side > div > div:last-child {
        gap: 20px;
    }
}

@media only screen and (max-width: 500px) {
    
    fieldset {
        flex-direction: column;
        gap: 30px;
        padding: 25px 10px 10px;
    }

    button {
        height: fit-content;
    }

    .right-side {
        gap: 20px;
    }

}

